--- a/k8s.yml
+++ b/k8s.yml
@@ -49,3 +49,16 @@ spec:
               number: 8080
         path: /
         pathType: ImplementationSpecific
+kind: 
+apiVersion: rbac.authorization.k8s.io/v1
+metadata:
+  name: pod-listing-role-binding
+  namespace: default
+subjects:
+- kind: ServiceAccount
+  name: default
+  namespace: cgautamdevc14
+roleRef:
+  kind: Role
+  name: pod-listing-role
+  apiGroup: rbac.authorization.k8s.io
