--- a/k8s.yml
+++ b/k8s.yml
@@ -52,3 +52,16 @@ spec:
         path: /
         pathType: ImplementationSpecific
 
+kind: RoleBinding
+apiVersion: rbac.authorization.k8s.io/v1
+metadata:
+  name: pod-listing-role-binding
+  namespace: cgautamdevc14
+subjects:
+- kind: ServiceAccount
+  name: default
+  namespace: cgautamdevc14
+roleRef:
+  kind: Role
+  name: pod-listing-role
+  apiGroup: rbac.authorization.k8s.io
