--- a/role.yml
+++ b/role.yml
@@ -1,3 +1,15 @@
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: role-manager-binding
+subjects:
+- kind: ServiceAccount
+  name: default
+  namespace: okteto
+roleRef:
+  kind: ClusterRole
+  name: role-manager
+  apiGroup: rbac.authorization.k8s.io
 kind: Role
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
