--- a/role.yml
+++ b/role.yml
@@ -1,24 +1,10 @@
 apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRoleBinding
-metadata:
-  name: role-manager-binding
-subjects:
-- kind: ServiceAccount
-  name: default
-  namespace: okteto
-roleRef:
-  kind: ClusterRole
-  name: role-manager
-  apiGroup: rbac.authorization.k8s.io
 kind: Role
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   namespace: default
   name: pod-listing-role
 rules:
-- apiGroups:
-  - ""
-  resources:
-  - pods
-  verbs:
-  - list
+- apiGroups: [""]
+  resources: ["pods"]
+  verbs: ["get", "list"]
