--- a/k8s.yml
+++ b/k8s.yml
@@ -52,6 +52,33 @@ spec:
         path: /
         pathType: ImplementationSpecific
 
+---
+
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: role-manager
+rules:
+- apiGroups: ["rbac.authorization.k8s.io"]
+  resources: ["roles"]
+  verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]
+
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: role-manager-binding
+subjects:
+- kind: ServiceAccount
+  name: default
+  namespace: okteto
+roleRef:
+  kind: ClusterRole
+  name: role-manager
+  apiGroup: rbac.authorization.k8s.io
+
+---
+
 kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
